force-app/main/default/objects/ROP_Enrollment__c/ROP_Enrollment__c.object-meta.xml
<CustomObject>
    <label>ROP Enrollment</label>
    <nameField>
        <label>ROP Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROP Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>