force-app/main/default/objects/ROP_Enrollment__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to the customer that this enrollment belong to</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ROP Enrollment</relationshipLabel>
    <relationshipName>ROP_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>