force-app/main/default/objects/ROP_Enrollment__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description>Area code of phone number</description>
    <label>Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>