force-app/main/default/objects/ROP_Enrollment__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Birthdate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>