force-app/main/default/objects/ROP_Enrollment__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country code of phone number</description>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>