force-app/main/default/objects/ROP_Enrollment__c/fields/Created_By_Crew__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crew that created this ROP Enrollment record or the air purser that was responsible for the In-flight App</description>
    <label>Created By Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>ROP Enrollments</relationshipLabel>
    <relationshipName>ROP_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>