force-app/main/default/objects/ROP_Enrollment__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>The date that this ROP Enrollment occured</description>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>