force-app/main/default/objects/ROP_Enrollment__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>Date of birth of the customer enrolling</description>
    <formula>IF( TEXT(Status__c) == 'Enroll', 'Enroll', IF(AND(TEXT(Status__c) == 'Void',  ROP_Number__r.Name == NULL) ,'Void Before Sync', IF(AND(TEXT(Status__c) == 'Void',  ROP_Number__r.Name != NULL),'Void After Sync', '' ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>