force-app/main/default/objects/ROP_Enrollment__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of the customer</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>