force-app/main/default/objects/ROP_Enrollment__c/fields/FlightId__c.field-meta.xml
<CustomField>
    <fullName>FlightId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Flight that originated this ROP Enrollment</description>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>ROP Enrollments</relationshipLabel>
    <relationshipName>ROP_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>