force-app/main/default/objects/ROP_Enrollment__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of the customer</description>
    <label>Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>