force-app/main/default/objects/ROP_Enrollment__c/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether this ROP Enrollment encountered error during Web Service Callout</description>
    <label>Integration Error</label>
    <type>Checkbox</type>
</CustomField>