force-app/main/default/objects/ROP_Enrollment__c/fields/Integration_Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Reason__c</fullName>
    <description>The error from Web Service Callout</description>
    <label>Integration Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>