force-app/main/default/objects/ROP_Enrollment__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the customer</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>