force-app/main/default/objects/ROP_Enrollment__c/fields/Manual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate wheter this ROP Enrollment must be done manually because the salutation cannot be extracted from the customer's name</description>
    <label>Manual Enrollment</label>
    <type>Checkbox</type>
</CustomField>