force-app/main/default/objects/ROP_Enrollment__c/fields/MembershipId__c.field-meta.xml
<CustomField>
    <fullName>MembershipId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to the membership object</description>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>ROP Enrollment</relationshipLabel>
    <relationshipName>ROP_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>