force-app/main/default/objects/ROP_Enrollment__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality of the customer in 3 alphabets</description>
    <label>Nationality</label>
    <length>3</length>
    <type>Text</type>
</CustomField>