force-app/main/default/objects/ROP_Enrollment__c/fields/PassengerId__c.field-meta.xml
<CustomField>
    <fullName>PassengerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Passenger that enrolled</description>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>ROP Enrollment</relationshipLabel>
    <relationshipName>ROP_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>