force-app/main/default/objects/ROP_Enrollment__c/fields/PaxKey__c.field-meta.xml
<CustomField>
    <fullName>PaxKey__c</fullName>
    <description>PaxKey of the passenger</description>
    <externalId>true</externalId>
    <label>PaxKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>