force-app/main/default/objects/ROP_Enrollment__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number of the customer</description>
    <label>Phone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>