force-app/main/default/objects/ROP_Enrollment__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <description>Phone type of the customer wheter it is business, home or mobile phone</description>
    <label>Phone Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>