force-app/main/default/objects/ROP_Enrollment__c/fields/Reported_By_Crew__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crew that actually reported this ROP Enrollment</description>
    <label>Reported By Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>ROP Enrollments (Reported By Crew)</relationshipLabel>
    <relationshipName>ROP_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>