force-app/main/default/objects/ROP_Enrollment__c/fields/Response_from_THAI__c.field-meta.xml
<CustomField>
    <fullName>Response_from_THAI__c</fullName>
    <description>Response from Web Service Callout to TG</description>
    <label>Response from THAI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>