force-app/main/default/objects/ROP_Enrollment__c/fields/ROP_Number__c.field-meta.xml
<CustomField>
    <fullName>ROP_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to the assigned ROP Number record</description>
    <label>ROP Number</label>
    <referenceTo>ROP_Number_Inventory__c</referenceTo>
    <relationshipLabel>ROP Enrollments</relationshipLabel>
    <relationshipName>ROP_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>