force-app/main/default/objects/ROP_Enrollment__c/fields/ROP_Number_F__c.field-meta.xml
<CustomField>
    <fullName>ROP_Number_F__c</fullName>
    <description>The text version of the ROP Number</description>
    <formula>ROP_Number__r.ROP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROP Number Formula</label>
    <type>Text</type>
</CustomField>