force-app/main/default/objects/ROP_Enrollment__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Salutation of the customer</description>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>